@@ -58,7 +58,7 @@ struct _baobab_application {
 	GtkTreeStore *model;
 	gboolean STOP_SCANNING;
 	gboolean CONTENTS_CHANGED_DELAYED;
-	GSList *bbExcludedDirs;
+	GSList *excluded_dirs;
 	gboolean bbEnableHomeMonitor;
 	gchar *label_scan;
 	gboolean show_allocated;
@@ -96,8 +96,8 @@ void baobab_scan_root (void);
 void baobab_rescan_current_dir (void);
 void fill_model (struct chan_data *);
 void first_row (void);
-gint list_find (gconstpointer a, gconstpointer b);
-gboolean is_excluded_dir (const gchar *);
+gboolean baobab_is_excluded_dir (const gchar *);
+void baobab_set_excluded_dirs (GSList *);
 void set_toolbar_visible (gboolean visible);
 void set_statusbar_visible (gboolean visible);
 void set_statusbar (const gchar *);
